<resources>
    <string name="app_name">我的課件</string>
    <string name="version_name">ALS_DIYAppManager_v0.0.6_b6</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">配置</string>

    <string name="desc_text">描述：</string>
    <string name="type_text">課件類別：</string>
    <string name="date_text">更新日期：</string>
    <string name="size_text">檔案大小：</string>

    <string name="get_text">下載</string>
    <string name="update_text">更新</string>
    <string name="preview_text">預覽</string>
    <string name="downloading_text">下載中</string>
    <string name="decompression_text">解壓中</string>

    <string name="loadmore_text">讀取更多……</string>

    <string name="app_type_text">課件類別</string>

    <string name="login_title">登入 DIY Tools 課件預覽應用程式</string>
    <string name="scanning_text">掃描QR code</string>
    <string name="QR_code_login">QR code 登入</string>
    <string name="manual_login">登入</string>
    <string name="username_text">用戶名稱</string>
    <string name="password_text">用戶密碼</string>
    <string name="school_code_text">學校編號</string>
    <string name="remember_name_text">記住登入資料</string>
    <string name="scanning_tip_text">請掃描證件上QR code</string>
    <string name="scanning_fail_text">掃描失敗。</string>

    <string name="logout_text">登出</string>
    <string name="logout_tip_text">確定退出登入？</string>

    <string name="login_waiting">請稍後……</string>
    <string name="user_or_psd_is_empty">用戶名和密碼不能為空。</string>
    <string name="user_or_psd_is_incorrect">登入失敗。請檢查用戶名稱和密碼是否正確。</string>
    <string name="network_not_connection_tip">登入失敗。請檢查連線狀態及學校代號是否已正確輸入。</string>
    <string name="login_student_tip">你的戶口沒有足夠權限使用此應用程式。</string>
    <string name="login_success">登入成功。</string>

    <string name="load_all_text">所有數據加載完畢。</string>
    <string name="empty_tip_text">數據為空</string>
    <string name="network_not_connected">網絡未連接，請檢查網絡。</string>

    <string name="press_again_to_quit">再按一次，退出程序。</string>

    <string name="cancel_text">取消</string>
    <string name="sure_text">確定</string>

    <string name="manage_text">管理已下載課件</string>
    <string name="select_all_text">全選</string>
    <string name="select_no_one_text">全不選</string>
    <string name="delete_text">刪除已選課件</string>
    <string name="delete_all_text">全部刪除</string>
    <string name="selected_size_text">已選課件之檔案總大小：</string>
    <string name="back_text">返回</string>
    <string name="no_subject_selected_text">請選擇需要刪除的對象。</string>
    <string name="deleted_text">正在刪除已下載的課件</string>
    <string name="dian_text">……</string>
    <string name="delete_all_the_selected_Apps">刪除所有已選的課件？</string>
    <string name="delete_all_tip_text">刪除所有已下載的課件？</string>

    <string name="install_app_first">請先安裝 %s 應用程序。</string>
    <string name="file_not_exist">%s文件不存在，請確保SD卡中存在該dataset。</string>

    <string name="config_text">配置</string>
    <string name="config_title_text">設置</string>
    <string name="diy_path_text">DIY Tools 路徑</string>
    <string name="save_and_return_text">儲存並返回</string>
    <string name="save_success_tip">儲存成功。</string>

    <string name="sort_text">排序</string>
    <string name="last_modified_time">最後修改時間</string>
    <string name="search_app_text">搜尋我的課件</string>
    <string name="all_app_types">所有課件類別</string>

    <string name="msg_nospace_text">沒有足夠容量下載所選課件，請點選「管理已下載課件」並在刪除一些資料後再試。</string>
    <string name="msg_dlerror_text">下載課件時發生錯誤，請檢查連線狀況及重新整理課件列表，然後再試。</string>
    <string name="msg_abortdlownload_text">確定停止下載以下課件？</string>

    <array name="sort_arr">
        <item>最近更新日期(D)</item>
        <item>課件名稱(N)</item>
    </array>

    <array name="type_arr">
        <item>所有課件類別</item>
        <item>電子書</item>
        <item>手寫繪畫</item>
        <item>分組派卡</item>
        <item>影視搶答</item>
    </array>

</resources>
