<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="#99000000"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:visibility="gone">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:background="@drawable/delete_grey_shape"
        android:padding="5dp"
        android:text="@string/back_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selected_size_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp">

        <ToggleButton
            android:id="@+id/selectAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/delete_grey_shape"
            android:checked="false"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:textOff="@string/select_all_text"
            android:textOn="@string/select_no_one_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/delete_grey_shape"
            android:padding="5dp"
            android:text="@string/delete_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>
